@@ -61,3 +61,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 - fixed crash on item drag to circuit, if the item is held less than ~1s over the circuit (if it is, then dragging appears to work)
     - caused by timing condition, related to dragging explicit event consumption in the application
 - added flexible logging system
+- fixed removing of subcircuits from component list
